--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     <form id="formulaire">
 
         <label for="Email">Email:</label> <br> 
-        <input class="email" type="email" name="email" id="email" placeholder="Saisissez votre email">
+        <input class="email" type="email" name="email" id="email" placeholder="Saisissez votre email" required>
         <br> <br>
 
         <label for="Password">Password</label> <br> 
-        <input class="pass" type="password" name="" id=""placeholder="Saisissez votre mot de passe">
+        <input class="pass" type="password" name="password" id="password"placeholder="Saisissez votre mot de passe" required>
         <br><br>
         
         <input type="checkbox" name="" id="">
